--- a/src/main/resources/MyRecipes.fxml
+++ b/src/main/resources/MyRecipes.fxml
@@ -1,23 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
+<AnchorPane prefHeight="600.0"
+            prefWidth="1100.0"
+            xmlns="http://javafx.com/javafx/23"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.group.project.MyRecipesController"
-            prefWidth="1100.0" prefHeight="600.0">
-
+            fx:controller="com.group.project.MyRecipesController">
 
     <children>
-
-        <VBox spacing="20"
-              fillWidth="true"
-              AnchorPane.topAnchor="20.0"
+        <VBox fillWidth="true"
+              spacing="20"
               AnchorPane.bottomAnchor="20.0"
               AnchorPane.leftAnchor="20.0"
-              AnchorPane.rightAnchor="20.0">
+              AnchorPane.rightAnchor="20.0"
+              AnchorPane.topAnchor="20.0">
 
             <!-- Title -->
             <Label text="My Recipe"
@@ -29,25 +35,31 @@
             <HBox spacing="20">
 
                 <!-- Left: filters + buttons -->
-                <VBox spacing="15" prefWidth="280"
+                <VBox prefWidth="280"
+                      spacing="15"
                       style="-fx-background-color: white;
                              -fx-background-radius: 8;
                              -fx-font-family: 'Times New Roman';">
                     <padding>
-                        <Insets top="20" right="20" bottom="20" left="20"/>
+                        <Insets bottom="20" left="20" right="20" top="20" />
                     </padding>
 
                     <children>
-                        <!-- Filter dropdowns -->
+                        <!-- Filter labels + dropdowns -->
+
+                        <Label text="Cuisine:" />
                         <ChoiceBox fx:id="myCuisineChoicebox"
                                    prefWidth="200" />
 
+                        <Label text="Protein:" />
                         <ChoiceBox fx:id="myProteinChoicebox"
                                    prefWidth="200" />
 
+                        <Label text="Cooking Time:" />
                         <ChoiceBox fx:id="myLengthChoicebox"
                                    prefWidth="200" />
 
+                        <Label text="Difficulty:" />
                         <ChoiceBox fx:id="myDiffChoicebox"
                                    prefWidth="200" />
 
@@ -55,21 +67,23 @@
                         <Region prefHeight="40" VBox.vgrow="ALWAYS" />
 
                         <!-- Buttons -->
-                        <Button text="My Recipe"
-                                onAction="#showMyRecipes"
-                                prefWidth="220" prefHeight="50"
+                        <Button onAction="#showMyRecipes"
+                                prefHeight="50"
+                                prefWidth="220"
                                 style="-fx-font-family: 'Times New Roman';
                                        -fx-font-size: 16px;
                                        -fx-background-color: #eaeaea;
-                                       -fx-background-radius: 4;" />
+                                       -fx-background-radius: 4;"
+                                text="Enter" />
 
-                        <Button text="Back to Home"
-                                onAction="#goBackHome"
-                                prefWidth="220" prefHeight="50"
+                        <Button onAction="#goBackHome"
+                                prefHeight="50"
+                                prefWidth="220"
                                 style="-fx-font-family: 'Times New Roman';
                                        -fx-font-size: 16px;
                                        -fx-background-color: #eaeaea;
-                                       -fx-background-radius: 4;" />
+                                       -fx-background-radius: 4;"
+                                text="Back to Home" />
                     </children>
                 </VBox>
 
@@ -79,7 +93,7 @@
                              -fx-background-radius: 8;
                              -fx-font-family: 'Times New Roman';">
                     <padding>
-                        <Insets top="20" right="20" bottom="20" left="20"/>
+                        <Insets bottom="20" left="20" right="20" top="20" />
                     </padding>
 
                     <children>
@@ -88,18 +102,19 @@
                                       -fx-font-weight: bold;" />
 
                         <ListView fx:id="recipeList"
-                                  prefWidth="400"
-                                  prefHeight="500" />
+                                  prefHeight="500"
+                                  prefWidth="400" />
                     </children>
                 </VBox>
 
                 <!-- Right: recipe details + grocery button -->
-                <VBox spacing="10" prefWidth="380"
+                <VBox prefWidth="380"
+                      spacing="10"
                       style="-fx-background-color: white;
                              -fx-background-radius: 8;
                              -fx-font-family: 'Times New Roman';">
                     <padding>
-                        <Insets top="20" right="20" bottom="20" left="20"/>
+                        <Insets bottom="20" left="20" right="20" top="20" />
                     </padding>
 
                     <children>
@@ -108,23 +123,22 @@
                                       -fx-font-weight: bold;" />
 
                         <TextArea fx:id="recipeDetails"
-                                  prefWidth="340"
                                   prefHeight="450"
+                                  prefWidth="340"
                                   wrapText="true" />
 
-                        <Button text="Grocery list for this recipe"
-                                onAction="#openGroceryForSelected"
-                                prefWidth="260" prefHeight="40"
+                        <Button onAction="#openGroceryForSelected"
+                                prefHeight="40"
+                                prefWidth="260"
                                 style="-fx-font-family: 'Times New Roman';
-               -fx-font-size: 14;
-               -fx-background-color: #eaeaea;
-               -fx-background-radius: 4;" />
-
+                                       -fx-font-size: 14;
+                                       -fx-background-color: #eaeaea;
+                                       -fx-background-radius: 4;"
+                                text="Grocery list for this recipe" />
                     </children>
                 </VBox>
 
             </HBox>
         </VBox>
-
     </children>
 </AnchorPane>
